footer for lg screen

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       <div class="section3Logo">
         <img src="./images/illustration-laptop-mobile.svg" alt="">
       </div>
-      <div class="">
+      <div class="Titel">
         <div class="">
           <h2 class="">Free, open, simple</h2>
           <p class="">
