--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@300;600&family=Ubuntu:wght@400;500;700&display=swap"
     rel="stylesheet">
 
-  <!-- <link rel="stylesheet" href="./style/style.css">
-  <link rel="stylesheet" media="screen and (min-width: 780px)" href="./style/Lg-screen.css"> -->
+  <link rel="stylesheet" href="./style/style.css">
+  <link rel="stylesheet" media="screen and (min-width: 780px)" href="./style/Lg-screen.css">
   <script src="https://kit.fontawesome.com/d0ae8749c4.js" crossorigin="anonymous"></script>
   
   <title>Frontend Mentor | [Blogr]</title>
